--- a/src/main/resources/static/package.json
+++ b/src/main/resources/static/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.2.0",
     "bootstrap": "^5.2.2",
     "handlebars": "^4.7.7",
     "jquery": "^3.6.0",
