feat: 프로필 이미지 추가 기능

--- a/src/main/resources/static/package.json
+++ b/src/main/resources/static/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.2.0",
     "bootstrap": "^5.2.2",
+    "bootstrap-icons": "^1.9.1",
     "handlebars": "^4.7.7",
     "jquery": "^3.6.0",
     "jquery-validation": "^1.19.3",
