--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,10 @@ dependencies {
     implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
 
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
+    implementation 'commons-io:commons-io:2.11.0'
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
+    implementation 'org.apache.tika:tika-parsers:1.28.1'
+    implementation 'net.coobird:thumbnailator:0.4.17'
 
     runtimeOnly 'com.h2database:h2'
 
